--- a/ref.bib
+++ b/ref.bib
@@ -8,6 +8,13 @@
 	publisher = {{USENIX}},
 }
 
+@inproceedings{sen2007concolic,
+  title={Concolic testing},
+  author={Sen, Koushik},
+  booktitle={Proceedings of the twenty-second IEEE/ACM international conference on Automated software engineering},
+  pages={571--572},
+  year={2007}
+}
 
 @inproceedings{Koo:2019:CSD:3301417.3312501,
  author = {Koo, Hyungjoon and Ghavamnia, Seyedhamed and Polychronakis, Michalis},
@@ -23,6 +30,14 @@
  acmid = {3312501},
  publisher = {ACM},
  address = {New York, NY, USA},
+}
+
+@inproceedings{azad2019less,
+  title={Less is more: quantifying the security benefits of debloating web applications},
+  author={Azad, Babak Amin and Laperdrix, Pierre and Nikiforakis, Nick},
+  booktitle={28th USENIX Security Symposium (USENIX Security 19)},
+  pages={1697--1714},
+  year={2019}
 }
 
 @misc{zendframework1,
@@ -747,4 +762,305 @@ isbn="978-3-642-23822-2"
  title = {{WordPress: OpenSource Content Management System}},
  key = {wordpress},
  howpublished = {\url{https://wordpress.com/}},
+}
+
+@inproceedings{cadar2008klee,
+  title={Klee: unassisted and automatic generation of high-coverage tests for complex systems programs.},
+  author={Cadar, Cristian and Dunbar, Daniel and Engler, Dawson R and others},
+  booktitle={OSDI},
+  volume={8},
+  pages={209--224},
+  year={2008}
+}
+
+@article{cadar2008exe,
+  title={EXE: Automatically generating inputs of death},
+  author={Cadar, Cristian and Ganesh, Vijay and Pawlowski, Peter M and Dill, David L and Engler, Dawson R},
+  journal={ACM Transactions on Information and System Security (TISSEC)},
+  volume={12},
+  number={2},
+  pages={1--38},
+  year={2008},
+  publisher={ACM New York, NY, USA}
+}
+
+@inproceedings{cha2012unleashing,
+  title={Unleashing mayhem on binary code},
+  author={Cha, Sang Kil and Avgerinos, Thanassis and Rebert, Alexandre and Brumley, David},
+  booktitle={2012 IEEE Symposium on Security and Privacy},
+  pages={380--394},
+  year={2012},
+  organization={IEEE}
+}
+
+@article{chipounov2011s2e,
+  title={S2E: A platform for in-vivo multi-path analysis of software systems},
+  author={Chipounov, Vitaly and Kuznetsov, Volodymyr and Candea, George},
+  journal={Acm Sigplan Notices},
+  volume={46},
+  number={3},
+  pages={265--278},
+  year={2011},
+  publisher={ACM New York, NY, USA}
+}
+
+@inproceedings{lessismore,
+  title={Less is more: quantifying the security benefits of debloating web applications},
+  author={Azad, Babak Amin and Laperdrix, Pierre and Nikiforakis, Nick},
+  booktitle={Proceedings of the 28th USENIX Security Symposium},
+  year={2019}
+}
+@inproceedings{doupe2011fear,
+  title = {Fear the EAR: Discovering and mitigating execution after redirect vulnerabilities},
+  author={Doup{\'e}, Adam and Boe, Bryce and Kruegel, Christopher and Vigna, Giovanni},
+  booktitle={Proceedings of the 18th ACM conference on Computer and communications security},
+  year={2011}
+}
+@book{scalability-book,
+ title = {Web Scalability for Startup Engineers},
+ author = {Artur Ejsmont},
+ year = {2015},
+ publisher = {McGraw-Hill Education}
+ }
+@article{fratric2012ropguard,
+  title={ROPGuard: Runtime prevention of return-oriented programming attacks},
+  author={Fratri{\'c}, Ivan},
+  journal={Technical report},
+  year={2012}
+}
+@article{pappas2012kbouncer,
+  title={kBouncer: Efficient and transparent ROP mitigation},
+  author={Pappas, Vasilis},
+  journal={Apr},
+  year={2012}
+}
+@inproceedings{dahse2010rips,
+  title={RIPS-A static source code analyser for vulnerabilities in PHP scripts},
+  author={Dahse, Johannes and Schwenk, J{\"o}rg},
+  booktitle={Seminar Work (Seminer {\c{C}}alismasi). Horst G{\"o}rtz Institute Ruhr-University Bochum},
+  year={2010}
+}
+@book{kaufman2009finding,
+  title={Finding groups in data: an introduction to cluster analysis},
+  author={Kaufman, Leonard and Rousseeuw, Peter J},
+  volume={344},
+  year={2009},
+  publisher={John Wiley \& Sons}
+}
+@misc{openresty, 
+  author = {OpenResty},
+  year = {2021},
+  title={OpenResty: Scalable Web Platform by Extending NGINX with Lua}, 
+  url="https://openresty.org/en/"
+} 
+
+@book{mcconnell2004code,
+  title={Code complete},
+  author={McConnell, Steve},
+  year={2004},
+  publisher={Pearson Education}
+}
+
+@misc{PHPGGC,
+  author = {Ambionics Security},
+  year = {2017},
+  title = {PHPGGC: PHP Generic Gadget Chains},
+  url = "https://github.com/ambionics/phpggc"
+}
+
+@misc{upwork,
+  author={Upwork},
+  year={2021},
+  title = {Upwork: The marketplace for freelancers},
+  url = "https://upwork.com"
+}
+
+@misc{websitestatistics,
+  author={Statistica},
+  year={2021},
+  title = {Statistica: How many websites are there?},
+  url = "https://www.statista.com/chart/19058/number-of-websites-online/"
+}
+
+@misc{packagiststats,
+  author={Packagist},
+  year={2021},
+  title = {Packagist: The PHP Package Repository},
+  url = "https://packagist.org/statistics"
+}
+
+@misc{npmstatistics,
+  author = {NPM},
+  year = {2021},
+  title = {NPM: Node Package Manager Statistics},
+  url = "https://blog.npmjs.org/post/615388323067854848/so-long-and-thanks-for-all-the-packages.html"
+}
+
+@misc{pypi,
+  author = {PyPI},
+  year = {2021},
+  title = {PyPI Package Download Statistics},
+  url = "https://pypistats.org/top"
+}
+
+@misc{popularphp,
+  author = {Packagist},
+  year = {2021},
+  title = {Packagist: Popular PHP Packages},
+  url = "https://packagist.org/explore/popular"
+}
+
+@misc{wpfilemanager,
+  author = {Pawan Jaiswal},
+  year = {2021},
+  title = {WordPress File Manager Plugin Unauthenticated RCE Exploit},
+  url = "https://medium.com/swlh/wordpress-file-manager-plugin-exploit-for-unauthenticated-rce-8053db3512ac"
+}
+
+@inproceedings {saphire,
+author = {Alexander Bulekov and Rasoul Jahanshahi and Manuel Egele},
+title = {Saphire: Sandboxing {PHP} Applications with Tailored System Call Allowlists},
+booktitle={Proceedings of the 30th USENIX Security Symposium},
+year = {2021},
+isbn = {978-1-939133-24-3},
+url = "https://www.usenix.org/conference/usenixsecurity21/presentation/bulekov"
+}
+
+@inproceedings{mininode,
+  title = {Mininode: Reducing the Attack Surface of Node.js Applications},
+  author = {Koishybayev, Igibek and Kapravelos, Alexandros},
+  booktitle = {Proceedings of the International Symposium on Research in Attacks, Intrusions and Defenses (RAID)},
+  month = oct,
+  howpublished = {/projects/mininode/},
+  tag = {mininode},
+  year = {2020}
+}
+
+@article{dalton2009nemesis,
+  title={Nemesis: Preventing Authentication \& [and] Access Control Vulnerabilities in Web Applications},
+  author={Dalton, Michael and Kozyrakis, Christos and Zeldovich, Nickolai},
+  year={2009}
+}
+
+@inproceedings {259711,
+author = {Seyedhamed Ghavamnia and Tapti Palit and Azzedine Benameur and Michalis Polychronakis},
+title = {Confine: Automated System Call Policy Generation for Container Attack Surface Reduction},
+booktitle = {23rd International Symposium on Research in Attacks, Intrusions and Defenses},
+year = {2020},
+}
+
+@inproceedings{abubakar2021shard,
+  title={$SHARD$: Fine-Grained Kernel Specialization with Context-Aware Hardening},
+  author={Abubakar, Muhammad and Ahmad, Adil and Fonseca, Pedro and Xu, Dongyan},
+  booktitle={Proceedings of the 30th USENIX Security Symposium},
+  year={2021}
+}
+
+@inproceedings{snyder2017most,
+  title={Most websites don't need to vibrate: A cost-benefit approach to improving browser security},
+  author={Snyder, Peter and Taylor, Cynthia and Kanich, Chris},
+  booktitle={Proceedings of the ACM SIGSAC Conference on Computer and Communications Security},
+  year={2017}
+}
+
+}
+@inproceedings{qian2020slimium,
+  title={Slimium: Debloating the Chromium Browser with Feature Subsetting},
+  author={Qian, Chenxiong and Koo, Hyungjoon and Oh, ChangSeok and Kim, Taesoo and Lee, Wenke},
+  booktitle={Proceedings of the ACM SIGSAC Conference on Computer and Communications Security},
+  year={2020}
+}
+
+@inproceedings{ghavamnia2020temporal,
+  title={Temporal system call specialization for attack surface reduction},
+  author={Ghavamnia, Seyedhamed and Palit, Tapti and Mishra, Shachee and Polychronakis, Michalis},
+  booktitle={Proceedings of the 29th USENIX Security Symposium},
+  year={2020}
+}
+@inproceedings{mishra2020saffire,
+  title={Saffire: Context-sensitive Function Specialization and Hardening against Code Reuse Attacks},
+  author={Mishra, Shachee and Polychronakis, Michalis},
+  booktitle={IEEE European Symposium on Security \& Privacy},
+  year={2020}
+}
+@inproceedings{mishra2018shredder,
+  title={Shredder: Breaking exploits through API specialization},
+  author={Mishra, Shachee and Polychronakis, Michalis},
+  booktitle={Proceedings of the 34th Annual Computer Security Applications Conference},
+  year={2018}
+}
+@inproceedings{mishra2021sgxpecial,
+  title={SGXPecial: Specializing SGX Interfaces against Code Reuse Attacks},
+  author={Mishra, Shachee and Polychronakis, Michalis},
+  booktitle={Proceedings of the 14th European Workshop on Systems Security},
+  year={2021}
+}
+@inproceedings{koo2019configuration,
+  title={Configuration-driven software debloating},
+  author={Koo, Hyungjoon and Ghavamnia, Seyedhamed and Polychronakis, Michalis},
+  booktitle={Proceedings of the 12th European Workshop on Systems Security},
+  year={2019}
+}
+@inproceedings{jahanshahi2020you,
+  title={You shall not pass: Mitigating sql injection attacks on legacy web applications},
+  author={Jahanshahi, Rasoul and Doup{\'e}, Adam and Egele, Manuel},
+  booktitle={Proceedings of the 15th ACM Asia Conference on Computer and Communications Security},
+  year={2020}
+}
+@inproceedings{redini2019b,
+  title={Bintrimmer: Towards static binary debloating through abstract interpretation},
+  author={Redini, Nilo and Wang, Ruoyu and Machiry, Aravind and Shoshitaishvili, Yan and Vigna, Giovanni and Kruegel, Christopher},
+  booktitle={International Conference on Detection of Intrusions and Malware, and Vulnerability Assessment},
+  year={2019},
+}
+@inproceedings{quach2018debloating,
+  title={Debloating software through piece-wise compilation and loading},
+  author={Quach, Anh and Prakash, Aravind and Yan, Lok},
+  booktitle={Proceedings of the 27th USENIX Security Symposium},
+  year={2018}
+}
+@inproceedings{heo2018effective,
+  title={Effective program debloating via reinforcement learning},
+  author={Heo, Kihong and Lee, Woosuk and Pashakhanloo, Pardis and Naik, Mayur},
+  booktitle={Proceedings of the ACM SIGSAC Conference on Computer and Communications Security},
+  year={2018}
+}
+@INPROCEEDINGS{7582754,
+  author={Bocić, Ivan and Bultan, Tevfik},
+  booktitle={2016 31st IEEE/ACM International Conference on Automated Software Engineering (ASE)}, 
+  title={Finding access control bugs in web applications with CanCheck}, 
+  year={2016},
+  volume={},
+  number={},
+  doi={}}
+
+  @inproceedings{son2013fix,
+  title={Fix Me Up: Repairing Access-Control Bugs in Web Applications.},
+  author={Son, Sooel and McKinley, Kathryn S and Shmatikov, Vitaly},
+  booktitle={NDSS},
+  year={2013},
+  organization={Citeseer}
+}
+@inproceedings{rastogi2017cimplifier,
+  title={Cimplifier: automatically debloating containers},
+  author={Rastogi, Vaibhav and Davidson, Drew and De Carli, Lorenzo and Jha, Somesh and McDaniel, Patrick},
+  booktitle={Proceedings of the 2017 11th Joint Meeting on Foundations of Software Engineering},
+  year={2017}
+}
+@article{zeller2002simplifying,
+  title={Simplifying and isolating failure-inducing input},
+  author={Zeller, Andreas and Hildebrandt, Ralf},
+  journal={IEEE Transactions on Software Engineering},
+  volume={28},
+  number={2},
+  year={2002},
+  publisher={IEEE}
+}
+@inproceedings {255308,
+author = {Seyedhamed Ghavamnia and Tapti Palit and Shachee Mishra and Michalis Polychronakis},
+title = {Temporal System Call Specialization for Attack Surface Reduction},
+booktitle={Proceedings of the 29th USENIX Security Symposium},
+year={2020},
+isbn = {978-1-939133-17-5},
+url = "https://www.usenix.org/conference/usenixsecurity20/presentation/ghavamnia"
 }
